--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 		<div class="app-header-inner">
 			<div class="container-fluid py-2">
 				<div class="app-header-content">
-					<div class="row justify-content-between align-items-center">
+					<div class="row justify-content-between align-items-center" id="navbar">
 
 						<div class="col-auto">
 							<a id="sidepanel-toggler" class="sidepanel-toggler d-inline-block d-xl-none" href="#">
@@ -53,16 +53,11 @@
 							</form>
 						</div>
 
-						<div class="app-utilities col-auto">
-							<div class="app-utility-item app-notifications-dropdown dropdown">
-							</div>
-					
-
-							<div class="app-utility-item app-user-dropdown dropdown">
-								<a  id="user-dropdown-toggle" data-bs-toggle="dropdown" href="#"
-									role="button" aria-expanded="false">{{ user.username }}</a>
-							
-							</div>
+						<div class="app-utilities col-auto d-flex gap-3 align-items-center">
+							{% if page_name %}
+								<a> <button class="btn btn-success text-white"> {{ page_name }} qo'shish</button></a>
+							{% endif %}
+							<a  id="user-dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">{{ user.username }}</a>
 						</div>
 					</div>
 				</div>
@@ -153,7 +148,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{% url 'moliya' %}">
+							<a class="nav-link" href="{% url 'finance' %}">
 								<span class="nav-icon">
 									<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle"
 										fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -163,7 +158,7 @@
 											d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
 									</svg>
 								</span>
-								<span class="nav-link-text">Moliya</span>
+								<span class="nav-link-text">finance</span>
 							</a>
 						</li>
 					</ul>
