--- a/templates/tabs/finance.html
+++ b/templates/tabs/finance.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}Moliya{% endblock %}
+{% block title %}finance{% endblock %}
 
 
 {% block content %}
-    <h1>Moliya</h1>
+    <h1>finance</h1>
 {% endblock %}
