--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}{% load compress %}<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Edu Ground</title>
@@ -13,11 +13,17 @@
 	<link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 
 	<!-- FontAwesome JS-->
+	<link rel="stylesheet" href="{% static 'assets\plugins\fontawesome\css\all.min.css' %}">
 	<script defer src="{% static 'assets/plugins/fontawesome/js/all.min.js' %}"></script>
 
 	<!-- App CSS -->
 	<link id="theme-style" rel="stylesheet" href="{% static 'assets/css/portal.css' %}">
 
+	{% compress css %}
+        <link type="text/x-scss" href="{% static 'scss/modal.scss' %}" rel="stylesheet" media="screen">
+		<link type="text/x-scss" href="{% static 'scss/base.scss' %}" rel="stylesheet" media="screen">
+    {% endcompress %}
+	
 	{% block title %}
 	{% endblock title %}
 
@@ -25,6 +31,13 @@
 </head>
 
 <body class="app">
+	<div id="modal" class="back d-none">
+		<div id="modal" class="modal">
+			<div class="close" id="close"><i class="fa fa-close"></i></div>
+			{% block form %}
+			{% endblock form %}
+		</div>
+	</div>
 	<header class="app-header fixed-top">
 		<div class="app-header-inner">
 			<div class="container-fluid py-2">
@@ -55,7 +68,7 @@
 
 						<div class="app-utilities col-auto d-flex gap-3 align-items-center">
 							{% if page_name %}
-								<a> <button class="btn btn-success text-white"> {{ page_name }} qo'shish</button></a>
+								<a> <button class="btn btn-success text-white" id="open-modal"> {{ page_name }} qo'shish</button></a>
 							{% endif %}
 							<a  id="user-dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">{{ user.username }}</a>
 						</div>
@@ -158,7 +171,7 @@
 											d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
 									</svg>
 								</span>
-								<span class="nav-link-text">finance</span>
+								<span class="nav-link-text">Finance</span>
 							</a>
 						</li>
 					</ul>
@@ -194,19 +207,10 @@
 	</div>
 
 
-
-
-
-	<!-- Javascript -->
 	<script src="{% static 'assets/plugins/popper.min.js' %}"></script>
 	<script src="{% static 'assets/plugins/bootstrap/js/bootstrap.min.js' %}"></script>
-
-	<!-- Charts JS -->
-	<script src="{% static 'assets/plugins/chart.js/chart.min.js' %}"></script>
-	<script src="{% static 'assets/js/index-charts.js' %}"></script>
-
-	<!-- Page Specific JS -->
 	<script src="{% static 'assets/js/app.js' %}"></script>
+	<script src="{% static 'js/modal.js' %}"></script>
 
 </body>
 
