--- a/templates/base.html
+++ b/templates/base.html
@@ -61,9 +61,18 @@
 						<div class="app-search-box col">
 							<form class="app-search-form">
 								<input type="text" placeholder="Search..." name="search"
-									class="form-control search-input">
+									class="form-control search-input" list="users">
+									<datalist id="users">
+										<option value="ddssss">g</option>
+										<option value="a">f</option>
+										<option value="x">a</option>
+										<option value="c">w</option>
+									</datalist>
 								<button type="submit" class="btn search-btn btn-primary" value="Search"><i
 										class="fas fa-search"></i></button>
+
+
+								
 							</form>
 						</div>
 
