--- a/templates/tabs/index.html
+++ b/templates/tabs/index.html
@@ -11,13 +11,10 @@
 
 </style>
     <div class="wrapper">
-        <div class="card">lor</div>
-        <div class="card">lor</div>
-        <div class="card">lor</div>
-        <div class="card">lor</div>
-        <div class="card">lor</div>
-        <div class="card">lor</div>
-        <div class="card">lor</div>
-        <div class="card">lor</div>
+        <div class="card">Talabalar</div>
+        <div class="card">O'qituvchilar</div>
+        <div class="card">Kurlar</div>
+        <div class="card">Guruhlar</div>
+        
     </div>
 {% endblock %}
