--- a/accounts/templates/accounts/login-user.html
+++ b/accounts/templates/accounts/login-user.html
@@ -1,39 +1,68 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}{% load compress %}<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        {% compress css %}
+        <link type="text/x-scss" href="{% static 'scss/login.scss' %}" rel="stylesheet" media="screen">
+        {% endcompress %}
+    
+        <title>Document</title>
+    
+    </head>
 <body>
-    <h1>
-        Wellcome to <u>{{ ec.name }}</u>
-    </h1>
 
-    <form method="post">{% csrf_token %}
-        <div>User
-            <select name="username">
-                {% for i in ec.admins.all %}
-                    <option value="{{ i.username }}">{{ i.username }}</option>
-                {% endfor %}
-            </select>
-        </div><br>
-        <div>Password
-            <input type="password" name="password">
-        </div><br>
+    <div class="container">
+        <h1>
+            Wellcome to <u>{{ ec.name }}</u>
+        </h1>
+        <form method="post">{% csrf_token %}
+            <div>
+                <label for="">User</label>
+                <select name="username">
+                    {% for i in ec.admins.all %}
+                        <option value="{{ i.username }}">{{ i.username }}</option>
+                    {% endfor %}
+                </select>
+            </div><br>
 
-        
-        <button>Submit</button>
+            
+            <div>
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
+            </div>
 
-    </form>
+            <span>
+                <input  type="checkbox" id="checkbox" /><label for="checkbox">Show password</label>
+            </span>
+            
+            <div class="center">
+                <button type="submit">Send</button>
+            </div>
+    
+        </form>
+    
+        {% if error %}
+        <ul>
+            <li>{{ error }}</li>
+        </ul>
+        {% endif %}
+    </div>
+    
 
-    {% if error %}
-    <ul>
-        <li>{{ error }}</li>
-    </ul>
-    {% endif %}
+    <script>
+        let value = false
+        let checkbox = document.querySelector('#checkbox')
 
+        let password = document.querySelector('#password')
+
+        checkbox.addEventListener('change', (event)=>{
+            value = !value
+
+            value ? password.type = 'text' : password.type = 'password'
+        })
+
+    </script>
 </body>
 </html>
