--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
 
 	{% compress css %}
         <link type="text/x-scss" href="{% static 'scss/modal.scss' %}" rel="stylesheet" media="screen">
-		<link type="text/x-scss" href="{% static 'scss/base.scss' %}" rel="stylesheet" media="screen">
 		<link type="text/x-scss" href="{% static 'scss/table.scss' %}" rel="stylesheet" media="screen">
+		<link type="text/x-scss" href="{% static 'scss/base.scss' %}" rel="stylesheet" media="screen">
     {% endcompress %}
 	
 	{% block title %}
@@ -63,10 +63,10 @@
 								<input type="text" placeholder="Search..." name="search"
 									class="form-control search-input" list="users">
 									<datalist id="users">
-										<option value="ddssss">g</option>
-										<option value="a">f</option>
-										<option value="x">a</option>
-										<option value="c">w</option>
+										<option value="ddssss"></option>
+										<option value="xx"></option>
+										<option value="cx"></option>
+										<a href="http://youtube.com"><option value="axx"></a>
 									</datalist>
 								<button type="submit" class="btn search-btn btn-primary" value="Search"><i
 										class="fas fa-search"></i></button>
