--- a/templates/details/course-detail.html
+++ b/templates/details/course-detail.html
@@ -11,39 +11,42 @@
 
 
 {% block content %}
+    <div class="h1 ml-3">
+        {{ course.name       }} • {{ course.name }}
+    </div>
     <div class="_wrapper">
         <div class="info">xx</div>
-        <div class="groups">
-            <ul class="list-fluid">
-                <li class="special people">
+        <div class="_list">
+            <ul class="list-fluid mt-3">
+                <li class="special people xcol-5">
                     <span class="h5">
-                        Ism familiya
+                        Nomi
                     </span>
                     <span class="h5">
-                        Tel raqam
+                        O'qituvchi
                     </span>
                     <span class="h5">
-                        Tug'ilgan kuni
+                        Kurs nomi
                     </span>
                     <span class="h5">
-                        Balans
+                        O'quvchilar soni
                     </span>
                 </li>
-                {% for i in peoples %}
-                <li class="people">
-                    <span>
-                        <a href="">{{ i.full_name }}</a>
-                    </span>
-                    <span>
-                        {{ i.phone }}
-                    </span>
-                    <span>
-                        {{ i.birthday }}
-                    </span>
-                    <span>
-                        {{ i.balans }}
-                    </span>
-                </li>
+                {% for i in groups %}
+                    <li class="list__item xcol-5">
+                        <span>
+                            <a href="{% url 'group-detail' i.pk %}">{{ i.name }}</a>
+                        </span>
+                        <span>
+                            {{ i.teacher.full_name }}
+                        </span>
+                        <span>
+                            {{ i.course.name }}
+                        </span>
+                        <span>
+                            {{ i.peoples.count }}
+                        </span>
+                    </li>
                 {% endfor %}
             </ul>
         </div>
