--- a/static/scss/detail/course.scss
+++ b/static/scss/detail/course.scss
@@ -15,6 +15,22 @@
         background-color: white;
         width: 30%;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+        font-weight: 500;
+        
+
+        .float {
+            float: right;
+
+            button {
+                width: 40px;
+                height: 40px;
+                font-size: 12px;
+                border: none;
+                border-radius: 50%;
+                border: 1px solid #15a362;
+                padding: 10px;
+            }
+        }
     }
     
     ._list {
