--- a/static/scss/login.scss
+++ b/static/scss/login.scss
@@ -26,18 +26,15 @@ body {
 
 @keyframes gradient {
 	0% {
-		background-position: 0% 50%;
+		background-position: 0% 0%;
 	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+    25% {
+        background-position: 100% 100%
+    }
+    75% {
+        background-position: 0% 100%
+    }	
 }
-
-
-
 
 
 body {
